Update the homer.html template file

--- a/templates/homer.html
+++ b/templates/homer.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
       <h4>Homer Simpson</h4>
-      <img src="{{ url }}" />
+      <img src="{{ url }}" /><br />
       Image obtained from <a href="http://pngimg.com/">pngimg.com</a>, under <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons 4.0 BY-NC</a> license.
   </div>
 </body>
